--- a/templates/general.html.twig
+++ b/templates/general.html.twig
@@ -1,32 +1,57 @@
 <html>
     <head>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <meta chatset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>{%block title%}Bienvenu{%endblock%}</title>
-        {%block stylesheet%}{%endblock%}
-    </head>
-    <body>
-         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="
+        <style>
+            .search_area{
+                position: absolute;
+                right:5%;
+                top:15%;
+            }
+            .sub-tag{
+                text-align:center;
+                background-color:#efefef;
+                    margin: 2px;
+    border-radius: 5px;
+            }
+        </style>
+        {%block head%}{%endblock%}
+    {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+                <script src="/build/form.js"></script>
+        {% endblock %}
+        </head>
+        <tbody>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="
             position: fixed; width:100%; z-index:1;">
-             <div class="collapse navbar-collapse" id="navbarText">
-               <ul class="navbar-nav mr-auto">
-               <li class="nav-item active">
-               <a class="nav-link" href="/projects/">Home
-               <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-              <a class="nav-link" href="/user/tickets">Your Tickets</a>
-              </li>
-              <li class="nav-item">
-              <a class="nav-link" href="/user/projects">Your Projects</a>
-              </li>
-              </ul>
-              <form class="form-inline pull-xs-right"style="top:100 px">
-                  <input class="form-control" type="text" placeholder="Tag Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/projects/">Home
+                            <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/tickets">Your Tickets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/projects">Your Projects</a>
+                        </li>
+                    </ul>
+                   <div class="search_area">
+                        <form class="form-inline pull-xs-right"style="top:100 px" id="form" action="{{path('processing')}}">
+                            {% set formSearch = test.getForm() %}
+                            {{form_start(formSearch)}}
+                            {{form_widget(formSearch.Name, {'attr':{'class':'form-control', 'type':'text','placeholder':'Tag Search', 'name':'rechercher','id':'search', 'autocomplete':'off'}})}}
+                            {{form_widget(formSearch.Submit, {'attr':{'class':'btn btn-outline-success', 'style':'display:none;'}})}}
+                            {{form_end(formSearch)}}
+                            <div class="invalid-feedback" id=error style="display:none; margin-top:-0.75rem;">
+                            </div>
+                            <div id="sresult" class="search-result" style="display:none; margin-top:-0.75rem"></div>
+                        </form>
+                    </div> 
               <span class="navbar-text"><a href="/logout">Exit</a></span>
-            </div>
             {%block nav%}{%endblock%}
           </nav>
 
@@ -35,5 +60,5 @@
             {%block body%}{%endblock%}
         </div>
         <!-- footer -->
-    </body>
+    </tbody>
 </html>
